Spojeni delovi i izmenjen konekcioni string -> elegantniji nacin

--- a/StoreSoftware/App.config
+++ b/StoreSoftware/App.config
@@ -5,6 +5,6 @@
     </startup>
 
 <connectionStrings>
-  <add name="connstring" connectionString="Data Source=Andjela;Initial Catalog=ProdavnicaRacunarskeOpreme;Integrated Security=True"/>
+  <add name="connstring" connectionString="Data Source=LAPTOP-QQ1TU8ST;Initial Catalog=ProdavnicaRacunarskeOpreme;Integrated Security=True"/>
 </connectionStrings>
 </configuration>
