--- a/StoreSoftware/StoreSoftware.csproj
+++ b/StoreSoftware/StoreSoftware.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="itextsharp, Version=5.5.13.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -58,7 +61,45 @@
     <Compile Include="AdminMDIParent.Designer.cs">
       <DependentUpon>AdminMDIParent.cs</DependentUpon>
     </Compile>
+    <Compile Include="DodavanjeProizvoda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DodavanjeProizvoda.Designer.cs">
+      <DependentUpon>DodavanjeProizvoda.cs</DependentUpon>
+    </Compile>
     <Compile Include="HesovanjeSifre.cs" />
+    <Compile Include="Komercijalista.cs" />
+    <Compile Include="KomercijalistaMDIParent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KomercijalistaMDIParent.Designer.cs">
+      <DependentUpon>KomercijalistaMDIParent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KomercijalistaNaruciProizvod.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KomercijalistaNaruciProizvod.Designer.cs">
+      <DependentUpon>KomercijalistaNaruciProizvod.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KomercijalistaPregledDobavljaca.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KomercijalistaPregledDobavljaca.Designer.cs">
+      <DependentUpon>KomercijalistaPregledDobavljaca.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KomercijalistaProizvodiDobavljaca.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KomercijalistaProizvodiDobavljaca.Designer.cs">
+      <DependentUpon>KomercijalistaProizvodiDobavljaca.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KomercijalistaRegistrujNovogDobavljaca.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KomercijalistaRegistrujNovogDobavljaca.Designer.cs">
+      <DependentUpon>KomercijalistaRegistrujNovogDobavljaca.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KonekcioniString.cs" />
     <Compile Include="LoginForma.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,13 +130,46 @@
     <Compile Include="narucivanjeNovihProizvoda.Designer.cs">
       <DependentUpon>narucivanjeNovihProizvoda.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProdajaForma.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProdajaForma.Designer.cs">
+      <DependentUpon>ProdajaForma.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="PromenaAtributa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PromenaAtributa.Designer.cs">
+      <DependentUpon>PromenaAtributa.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Zamena.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Zamena.Designer.cs">
+      <DependentUpon>Zamena.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AdminDodavanjeKorisnika.resx">
       <DependentUpon>AdminDodavanjeKorisnika.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AdminMDIParent.resx">
       <DependentUpon>AdminMDIParent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DodavanjeProizvoda.resx">
+      <DependentUpon>DodavanjeProizvoda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KomercijalistaMDIParent.resx">
+      <DependentUpon>KomercijalistaMDIParent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KomercijalistaPregledDobavljaca.resx">
+      <DependentUpon>KomercijalistaPregledDobavljaca.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KomercijalistaProizvodiDobavljaca.resx">
+      <DependentUpon>KomercijalistaProizvodiDobavljaca.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KomercijalistaRegistrujNovogDobavljaca.resx">
+      <DependentUpon>KomercijalistaRegistrujNovogDobavljaca.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForma.resx">
       <DependentUpon>LoginForma.cs</DependentUpon>
@@ -112,6 +186,12 @@
     <EmbeddedResource Include="narucivanjeNovihProizvoda.resx">
       <DependentUpon>narucivanjeNovihProizvoda.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ProdajaForma.resx">
+      <DependentUpon>ProdajaForma.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PromenaAtributa.resx">
+      <DependentUpon>PromenaAtributa.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -121,6 +201,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Zamena.resx">
+      <DependentUpon>Zamena.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
